<resources>
    <string name="app_name">Vehicle Taxes – Belgium</string>

    <string name="ad_pub_id" translatable="false">ca-app-pub-6337813370020696~5663705544</string>
    <string name="ad_banner_id" translatable="false">ca-app-pub-6337813370020696/7906725504</string>
    <!--<string name="ad_banner_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="app_info_title">About</string>
    <string name="app_info_privacy_policy" translatable="false"><a href="https://docs.google.com/document/d/15eXYtg6Kjcev9qCZOLXEDKUlNT_MQwZSf6YWF4md2gc/">Privacy Policy</a></string>

    <string name="app_info">This application is not an official public authorities application.\n\nTax calculations are based on officially provided data provided on the following resources:</string>
    <string name="app_info_tax_walloon"><a href="https://finances.wallonie.be/home/fiscalite/fiscalite-des-vehicules.html">wallonie.be – Vehicle taxation</a></string>

    <string name="button_ok" translatable="false">OK</string>

    <string name="tax_annual">Annual Tax</string>
    <string name="tax_registration">Registration</string>
    <string name="tax_value_default" translatable="false">0 000.00 €</string>
    <string name="tax_value" translatable="false">%.2f €</string>

    <string name="selection_title">Select %s</string>

    <string name="region_title">Region</string>
    <string name="region_value_default" translatable="false">@string/region_walloon</string>
    <string name="region_walloon">Walloon</string>
    <string name="region_flemish">Flemish</string>
    <string name="region_brussels">Brussels</string>

    <string name="vehicle_type_title">Vehicle type</string>
    <string name="vehicle_type_value_default" translatable="false">@string/vehicle_type_car</string>
    <string name="vehicle_type_car">Passenger car</string>
    <string name="vehicle_type_moto">Motorcycle</string>

    <string name="engine_type_title">Engine type</string>
    <string name="engine_type_value_default" translatable="false">@string/engine_type_petrol</string>
    <string name="engine_type_petrol">Petrol</string>
    <string name="engine_type_diesel">Diesel</string>
    <string name="engine_type_lpg" translatable="false">LPG</string>
    <string name="engine_type_hybrid">Hybrid</string>
    <string name="engine_type_electric">Electric</string>

    <string name="age_title">Age</string>
    <string name="age_value">%d year(s)</string>
    <string name="age_value_lower">New</string>
    <string name="age_value_greater">%d+ years</string>
    <string name="age_value_default">1 year</string>

    <string name="engine_power_title">Engine Power</string>
    <string name="engine_power_value" translatable="false">%s kW</string>
    <string name="engine_power_value_lower" translatable="false">≤%d kW</string>
    <string name="engine_power_value_greater" translatable="false">%d+ kW</string>
    <string name="engine_power_value_default" translatable="false">100 kW</string>
    <string name="engine_power_up_to_70" translatable="false">≤70</string>
    <string name="engine_power_up_to_85" translatable="false">71 – 85</string>
    <string name="engine_power_up_to_100" translatable="false">86 – 100</string>
    <string name="engine_power_up_to_110" translatable="false">101 – 110</string>
    <string name="engine_power_up_to_120" translatable="false">111 – 120</string>
    <string name="engine_power_up_to_155" translatable="false">121 – 155</string>
    <string name="engine_power_more_than_155" translatable="false">155+</string>

    <string name="engine_size_title">Engine size</string>
    <string name="engine_size_value" translatable="false">%d cm³</string>
    <string name="engine_size_value_lower" translatable="false">≤%d cm³</string>
    <string name="engine_size_value_greater" translatable="false">%d+ cm³</string>
    <string name="engine_size_value_default" translatable="false">999 cm³</string>

    <string name="emission_title">CO2 Emission</string>
    <string name="emission_value" translatable="false">%s g/km</string>
    <string name="emission_value_lower" translatable="false">≤%d g/km</string>
    <string name="emission_value_greater" translatable="false">%d+ g/km</string>
    <string name="emission_value_default" translatable="false">99 g/km</string>
    <string name="emission_up_to_145" translatable="false">≤145</string>
    <string name="emission_up_to_155" translatable="false">146 – 155</string>
    <string name="emission_up_to_165" translatable="false">156 – 165</string>
    <string name="emission_up_to_175" translatable="false">166 – 175</string>
    <string name="emission_up_to_185" translatable="false">176 – 185</string>
    <string name="emission_up_to_195" translatable="false">186 – 195</string>
    <string name="emission_up_to_205" translatable="false">196 – 205</string>
    <string name="emission_up_to_215" translatable="false">206 – 215</string>
    <string name="emission_up_to_225" translatable="false">216 – 225</string>
    <string name="emission_up_to_235" translatable="false">226 – 235</string>
    <string name="emission_up_to_245" translatable="false">236 – 245</string>
    <string name="emission_up_to_255" translatable="false">246 – 255</string>
    <string name="emission_more_than_255" translatable="false">255+</string>

    <string name="children_title">Children</string>
    <string name="children_value" translatable="false">%d</string>
    <string name="children_value_lower">No</string>
    <string name="children_value_greater" translatable="false">%d+</string>
    <string name="children_value_default" translatable="false">@string/children_value_lower</string>


    <string name="default_value" translatable="false">0</string>

</resources>